# kaldra

./: .gitignore  README.md
kaldra/: CHANGELOG.md  README.md  pyproject.toml
kaldra/docs/: SPEC_KALDRA_ALPHA.md
kaldra/kaldra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kaldra/kernel/alpha/docs/: MODEL_CARD.md  README.md  ROADMAP.md  alpha_spec.md
kaldra/kernel/alpha/src/: delta12_dynamic.py  delta144_dynamic.py  kappa.py  kindra_drift.py  painleve.py  pipeline.py  scorer.py  state_machine.py  tracy_widom.py
kaldra/kernel/bias/: MODEL_CARD.md  README.md  ROADMAP.md
kaldra/kernel/bias/api/: main.py
kaldra/kernel/bias/data/: model_v04.joblib
kaldra/kernel/bias/eval/: eval_kaldra_bias.py
kaldra/kernel/bias/src/: delta12.py  delta144_mapping.py  embeddings.py  explain.py  kindra_3x48.py  logging_config.py  pipeline.py  scorer.py  settings.py  tau.py  train.py
kaldra/kernel/core/src/: __init__.py  delta12.py  delta144_mapping.py  embeddings.py  logging_config.py
kaldra/kernel/geo/: README.md
kaldra/kernel/geo/docs/: MODEL_CARD.md  README.md  ROADMAP.md  geo_spec.md
kaldra/kernel/geo/src/: delta12_dynamic.py  delta144_dynamic.py  geo_state_machine.py  kappa_geo.py  kindra_geo_drift.py  painleve.py  pipeline.py  scorer.py  tracy_widom.py
kaldra/kernel/product/docs/: MODEL_CARD.md  README.md  ROADMAP.md  product_spec.md
kaldra/kernel/product/src/: delta12_dynamic.py  delta144_dynamic.py  kappa_product.py  kindra_product_drift.py  painleve.py  pipeline.py  product_state_machine.py  (+2 more)
kaldra/kernel/safeguard/: MODEL_CARD.md  README.md  ROADMAP.md
(+35 files in other folders)
