[project]
name = "kaldra"
version = "0.5.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "scikit-learn",
    "sentence-transformers",
    "joblib",
    "loguru>=0.7.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*"]
exclude = ["docs", "infra", "core", "mythos"]
